corrected update function
